objects/SunPower_Design__c.object
<CustomObject>
    <fields>
        <fullName>DealerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DealerAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SunPower Design</relationshipLabel>
        <relationshipName>SunPower_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Notes__c</fullName>
        <label>Design Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>InvisiMount Design Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EU_Inverter_Type__c</fullName>
        <description>Inverter type, used as a criteria for EU SmartPack pricing.</description>
        <label>Inverter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA Technologie AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xantrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santerno</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EU_Mounting_Type__c</fullName>
        <description>We need to include a criteria for type of racking. Mounting Systems offers two different types of racking (On-roof vs In-roof) These racking are completely different one from the other and their prices are also different.</description>
        <label>Mounting Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solrif (flashings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solrif (non-flashings)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_KIT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS KIT</label>
        <referenceTo>SMS_Pricing__c</referenceTo>
        <relationshipLabel>SunPower Design</relationshipLabel>
        <relationshipName>SunPower_Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SmartMount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SmartMount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Source__c</fullName>
        <description>The system that generated this design.  Currently  SmartPack is the only tool that can create SunPower designs.</description>
        <label>System Source</label>
        <picklist>
            <picklistValues>
                <fullName>SmartPack</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>system_size__c</fullName>
        <description>Total System size in kW DC</description>
        <inlineHelpText>Total System size in kW DC</inlineHelpText>
        <label>System Size (kW)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SunPower Design</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DealerAccount__c</columns>
        <columns>Design_Notes__c</columns>
        <columns>system_size__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SmartPack Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SunPower Design</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>